fix alignment of rep add

--- a/5eShaped/precompiled/styles/_roll20-overwrite.scss
+++ b/5eShaped/precompiled/styles/_roll20-overwrite.scss
@@ -89,3 +89,7 @@ ul,
 ol {
   margin: 0 0 0 15px;
 }
+
+.repcontrol_add {
+  float: left;
+}
